# Inshi-C

./: CMakeLists.txt  README.md
H18/: code1.c
H19/: CMakeLists.txt
H20/: code1.c
H21/: code1.c
H22/: code1.c
H24/: code1.c
H25/: code1.c
H26/: code1.c
H27/: code2.c
H28/: code1.c
H29/: code1.c
H30/: code1.c
H31/: code1.c
R2/: code1.c
R3/: code1.c
R4/: code1.c  data.txt
R5/: code1  code1.c
R6/: code1  code1.c
