cmake_minimum_required(VERSION 3.0)

project(Inshi-C)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/R5)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/R4)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/R3)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/R2)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H31)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H30)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H29)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H28)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H27)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H26)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H25)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H24)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H23)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H22)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H21)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H20)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H19)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/H18)
